# TestApiAssignment

./: .gitignore  Assets.qrc  CMakeLists.txt  Changelog.md  OpenFileDialog.qml  README.md  TabAddUser.qml  TabUsers.qml  UI.qrc  main.qml
Styles/: Default.qml
android/: AndroidManifest.xml
cmake/: generate_version_header.cmake
header/: DataStructures.h  FileHelper.h  NetworkDefines.h  NetworkManager.h  PositionsModel.h  UsersModel.h  Version.h.in
src/: FileHelper.cpp  NetworkManager.cpp  PositionsModel.cpp  UsersModel.cpp  main.cpp
